--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,9 +7,12 @@ export(calculate.thresholds)
 export(conf.roc)
 export(find_thresholds)
 export(get_auc)
+export(get_roc_perf)
 export(get_tpr_fpr_index)
 export(get_tpr_matrix)
+export(perf.roc)
 export(test.code)
+export(test.code2)
 export(tpr_fpr_boot)
 export(true_tpr_fpr)
 importFrom(Rcpp,sourceCpp)
