--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,8 +10,7 @@ Maintainer: Erik Peter <jerikpeter@googlemail.com>
 Description: This package implements a very fast algorithm to quickly bootstrap 
     ROC Curves.
 License: GPL-3
-Depends: R (>= 3.1.0), ggplot2, Rcpp
+Depends: R (>= 3.1.0), ggplot2
 Imports: 
-    ggplot2,
     Rcpp
 LinkingTo: Rcpp
