improved documentation further; first version which passes R CMD check without notes

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,9 +7,12 @@ Authors@R: c(person("Erik", "Peter", email = "jerikpeter@googlemail.com",
              role = c("aut", "cre")))
 Author: Erik Peter
 Maintainer: Erik Peter <jerikpeter@googlemail.com>
-Description: This package implements a very fast algorithm to quickly bootstrap 
-    ROC Curves.
-License: GPL-3
+Description: Implements a very fast C++ algorithm to quickly bootstrap 
+    ROC Curves and derived performance metrics, e.g. AUC. 
+    Results can be plotted and confidence intervals calculated.
+    Currently 100000 bootstrap replicates for 500 observations take about
+    one second.
+License: GPL-2
 Depends: R (>= 3.1.0), ggplot2
 Imports: 
     Rcpp
