--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,5 +8,6 @@ export(boot.roc)
 export(calculate.thresholds)
 export(conf.roc)
 export(perf.roc)
+import(ggplot2)
 importFrom(Rcpp,sourceCpp)
 useDynLib(fbroc)
