improved documentation and added one convenience function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ S3method(plot,fbroc.roc)
 S3method(print,fbroc.perf)
 S3method(print,fbroc.roc)
 export(boot.roc)
+export(boot.tpr.at.fpr)
 export(calculate.thresholds)
 export(conf.roc)
 export(perf.roc)
