--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,7 +11,7 @@ Description: Implements a very fast C++ algorithm to quickly bootstrap
     Currently the calculation of 100000 bootstrap replicates for 500 observations 
     takes about one second.
 License: GPL-2
-URL: http://github.com/erikpeter/fbroc
+URL: http://github.com/erikpeter/fbroc, http://www.epeter-stats.de:3838/fbroc.serv/
 BugReports: http://github.com/erikpeter/fbroc/issues
 Depends: R (>= 3.1.0), ggplot2
 Imports: 
