first class version was working, but turns out to be too slow -> rewrite roc class

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,10 +5,12 @@ S3method(plot,fbroc.roc)
 S3method(print,fbroc.perf)
 S3method(print,fbroc.roc)
 export(boot.roc)
+export(boot.roc2)
 export(boot.tpr.at.fpr)
 export(calculate.thresholds)
 export(conf.roc)
 export(perf.roc)
+export(perf.roc2)
 import(ggplot2)
 importFrom(Rcpp,sourceCpp)
 useDynLib(fbroc)
