--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,17 +1,17 @@
 Package: fbroc
 Type: Package
 Title: Fast Algorithms to Bootstrap ROC Curves
-Version: 0.2.0.9000
-Date: 2015-04-29
+Version: 0.2.0
+Date: 2015-06-05
 Authors@R: c(person("Erik", "Peter", email = "jerikpeter@googlemail.com", 
              role = c("aut", "cre")))
 Description: Implements a very fast C++ algorithm to quickly bootstrap 
-    ROC Curves and derived performance metrics (e.g. AUC). You can also plot the
+    ROC Curves and derived performance metrics (e.g. AUC, TPR, FPR). You can also plot the
     results and calculate confidence intervals.
     Currently the calculation of 100000 bootstrap replicates for 500 observations 
     takes about one second.
 License: GPL-2
-URL: http://github.com/erikpeter/fbroc, http://www.epeter-stats.de/roc-curve-analysis-with-fbroc/
+URL: http://www.epeter-stats.de/roc-curve-analysis-with-fbroc/
 BugReports: http://github.com/erikpeter/fbroc/issues
 Depends: R (>= 3.1.0), ggplot2
 Imports: 
