hopefully final changes before 0.2

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,8 +6,8 @@ Date: 2015-06-05
 Authors@R: c(person("Erik", "Peter", email = "jerikpeter@googlemail.com", 
              role = c("aut", "cre")))
 Description: Implements a very fast C++ algorithm to quickly bootstrap 
-    ROC Curves and derived performance metrics (e.g. AUC, TPR, FPR). You can also plot the
-    results and calculate confidence intervals.
+    ROC Curves and derived performance metrics (e.g. AUC, true and false positive rate). 
+    You can also plot the results and calculate confidence intervals.
     Currently the calculation of 100000 bootstrap replicates for 500 observations 
     takes about one second.
 License: GPL-2
