--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,13 @@
 Package: fbroc
 Type: Package
-Title: Fast Algorithms to Bootstrap ROC Curves
+Title: Fast Algorithms to Bootstrap Receiver Operating Characteristics Curves
 Version: 0.2.0
 Date: 2015-06-05
 Authors@R: c(person("Erik", "Peter", email = "jerikpeter@googlemail.com", 
              role = c("aut", "cre")))
 Description: Implements a very fast C++ algorithm to quickly bootstrap 
-    ROC Curves and derived performance metrics (e.g. AUC, true and false positive rate). 
+    Receiver Operating Characteristics (ROC) curves and derived performance metrics, including the area under the 
+    curve (AUC) as well as the true and false positive rate. 
     You can also plot the results and calculate confidence intervals.
     Currently the calculation of 100000 bootstrap replicates for 500 observations 
     takes about one second.
