started implementing paired roc curves

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method(plot,fbroc.perf)
 S3method(plot,fbroc.roc)
 S3method(print,fbroc.perf)
 S3method(print,fbroc.roc)
+export(boot.paired.roc)
 export(boot.roc)
 export(boot.tpr.at.fpr)
 export(conf.roc)
