first working performance estimates for paired roc curves

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(boot.paired.roc)
 export(boot.roc)
 export(boot.tpr.at.fpr)
 export(conf.roc)
+export(perf.paired.roc)
 export(perf.roc)
 import(ggplot2)
 importFrom(Rcpp,sourceCpp)
