changed colors a bit

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(boot.paired.roc)
 export(boot.roc)
 export(boot.tpr.at.fpr)
 export(conf.roc)
+export(conf.roc.paired)
 export(extract.single.roc)
 export(perf.paired.roc)
 export(perf.roc)
