changed new S3 generic and methods to follow consistency rules

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(boot.tpr.at.fpr)
 export(conf.roc)
 export(conf.roc.paired)
 export(extract.single.roc)
+export(perf)
 import(ggplot2)
 importFrom(Rcpp,sourceCpp)
 useDynLib(fbroc)
