cached mode works with plotting as well

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,7 +16,7 @@ export(boot.paired.roc)
 export(boot.roc)
 export(boot.tpr.at.fpr)
 export(conf)
-export(extract.single.roc)
+export(extract.roc)
 export(perf)
 import(ggplot2)
 importFrom(Rcpp,sourceCpp)
