--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ S3method(perf,fbroc.paired.roc)
 S3method(perf,fbroc.roc)
 S3method(perf,roc)
 S3method(plot,fbroc.conf)
+S3method(plot,fbroc.conf.paired)
 S3method(plot,fbroc.paired.roc)
 S3method(plot,fbroc.perf)
 S3method(plot,fbroc.perf.paired)
