--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,20 +1,21 @@
 Package: fbroc
 Type: Package
 Title: Fast Algorithms to Bootstrap Receiver Operating Characteristics Curves
-Version: 0.3.0.9000
-Date: 2015-07-03
+Version: 0.3.0
+Date: 2015-10-07
 Authors@R: c(person("Erik", "Peter", email = "jerikpeter@googlemail.com", 
              role = c("aut", "cre")))
 Description: Implements a very fast C++ algorithm to quickly bootstrap 
     receiver operating characteristics (ROC) curves and derived performance metrics, including the area under the 
-    curve (AUC) as well as the true and false positive rate. 
+    curve (AUC) as well as the true and false positive rate. Also supported is the analysis of paired
+    receiver operating curves to compare two predictors.
     You can also plot the results and calculate confidence intervals.
     Currently the calculation of 100000 bootstrap replicates for 500 observations 
     takes about one second.
 License: GPL-2
 URL: http://www.epeter-stats.de/roc-curve-analysis-with-fbroc/
 BugReports: http://github.com/erikpeter/fbroc/issues
-Depends: R (>= 3.1.0), ggplot2
+Depends: R (>= 3.2.2), ggplot2
 Imports: 
     Rcpp
 LinkingTo: Rcpp
