--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,15 +7,15 @@ Authors@R: c(person("Erik", "Peter", email = "jerikpeter@googlemail.com",
              role = c("aut", "cre")))
 Description: Implements a very fast C++ algorithm to quickly bootstrap 
     receiver operating characteristics (ROC) curves and derived performance metrics, including the area under the 
-    curve (AUC) as well as the true and false positive rate. Also supported is the analysis of paired
-    receiver operating curves to compare two predictors.
+    curve (AUC) as well as the true and false positive rate. The analysis of paired
+    receiver operating curves is supported as well, so that a comparison of two predictors is possible.
     You can also plot the results and calculate confidence intervals.
     Currently the calculation of 100000 bootstrap replicates for 500 observations 
     takes about one second.
 License: GPL-2
 URL: http://www.epeter-stats.de/roc-curve-analysis-with-fbroc/
 BugReports: http://github.com/erikpeter/fbroc/issues
-Depends: R (>= 3.2.2), ggplot2
+Depends: R (>= 3.2.2), ggplot2, methods, stats, utils
 Imports: 
     Rcpp
 LinkingTo: Rcpp
