--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,4 +22,9 @@ export(extract.roc)
 export(perf)
 import(ggplot2)
 importFrom(Rcpp,sourceCpp)
+importFrom(methods,is)
+importFrom(stats,cor)
+importFrom(stats,quantile)
+importFrom(stats,sd)
+importFrom(utils,object.size)
 useDynLib(fbroc)
