--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,22 +1,28 @@
 Package: fbroc
 Type: Package
 Title: Fast Algorithms to Bootstrap Receiver Operating Characteristics Curves
-Version: 0.3.1
-Date: 2015-10-12
+Version: 0.4.0
+Date: 2016-06-18
 Authors@R: c(person("Erik", "Peter", email = "jerikpeter@googlemail.com", 
              role = c("aut", "cre")))
-Description: Implements a very fast C++ algorithm to quickly bootstrap 
-    receiver operating characteristics (ROC) curves and derived performance metrics, including the area under the 
-    curve (AUC) as well as the true and false positive rate. The analysis of paired
-    receiver operating curves is supported as well, so that a comparison of two predictors is possible.
-    You can also plot the results and calculate confidence intervals.
-    Currently the calculation of 100000 bootstrap replicates for 500 observations 
-    takes about one second.
+Description: Implements a very fast C++ algorithm to quickly bootstrap receiver
+    operating characteristics (ROC) curves and derived performance metrics,
+    including the area under the curve (AUC) as well as the true and false positive
+    rate. The analysis of paired receiver operating curves is supported as well,
+    so that a comparison of two predictors is possible. You can also plot the
+    results and calculate confidence intervals. Currently the calculation of 100000
+    bootstrap replicates for 500 observations takes about one second.
 License: GPL-2
 URL: http://www.epeter-stats.de/roc-curve-analysis-with-fbroc/
 BugReports: http://github.com/erikpeter/fbroc/issues
-Depends: R (>= 3.2.0), ggplot2, methods, stats, utils
-Imports: 
+Depends:
+    R (>= 3.2.0),
+    ggplot2,
+    methods,
+    stats,
+    utils
+Imports:
     Rcpp
 LinkingTo: Rcpp
 LazyData: true
+RoxygenNote: 5.0.1
