--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,8 +10,9 @@ Description: Implements a very fast C++ algorithm to quickly bootstrap receiver
     including the area under the curve (AUC) as well as the true and false positive
     rate. The analysis of paired receiver operating curves is supported as well,
     so that a comparison of two predictors is possible. You can also plot the
-    results and calculate confidence intervals. Currently the calculation of 100000
-    bootstrap replicates for 500 observations takes about one second.
+    results and calculate confidence intervals. On a typical desktop computer the time needed for 
+    the calculation of 100000 bootstrap replicates given 500 observations requires time on the
+    order of magnitude of one second.
 License: GPL-2
 URL: http://www.epeter-stats.de/roc-curve-analysis-with-fbroc/
 BugReports: http://github.com/erikpeter/fbroc/issues
