--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: fbroc
 Type: Package
 Title: Fast Algorithms to Bootstrap Receiver Operating Characteristics Curves
-Version: 0.4.0
-Date: 2016-06-21
+Version: 0.4.1
+Date: 2019-03-24
 Authors@R: c(person("Erik", "Peter", email = "jerikpeter@googlemail.com", 
              role = c("aut", "cre")))
 Description: Implements a very fast C++ algorithm to quickly bootstrap receiver
@@ -26,4 +26,5 @@ Imports:
     Rcpp
 LinkingTo: Rcpp
 LazyData: true
-RoxygenNote: 5.0.1
+RoxygenNote: 6.1.1
+Encoding: UTF-8
